<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gr8Math</string>
    <string name="title_small_login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="title_big_login">LOGIN</string>
    <string name="register_title">Register</string>
    <string name="register_subtitle">Please enter the needed details.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_reenter_password">Re-enter Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_lrn">Learner’s Reference Number</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_teachingPos">Teaching Position</string>
    <string name="hint_dob">01/01/1995</string>
    <string name="action_submit">Submit</string>
    <string name="action_next">Next</string>
    <string name="hint_birthdate">Birthdate</string>
    <string name="hint_birthdate_placeholder">MM/DD/YYYY</string>
    <string name="fp_title">Change Password</string>
    <string name="fp_info">A verification code will be sent to your email.</string>
    <string name="fp_code">Code</string>
    <string name="fp_Emailcode">Email</string>
    <string name="fp_get_code">Get Code</string>
    <string name="fp_verify">Verify</string>
    <string name="fp_new_password">New Password</string>
    <string name="fp_reenter_password">Re-enter Password</string>
    <string name="fp_save">Save Password</string>
    <string name="fp_password_requirements">Please create a new password. The password needs to follow the following requirements:\n\n- Minimum of 8 and maximum of 16 characters\n- At least one uppercase letter\n- At least one number and one special character</string>
    <string name="cp_title">Create Password</string>
    <string name="terms_and_conditions_checkbox">By checking this box, you are agreeing to our Terms and Conditions and Privacy Policy.</string>
    <string name="account_management_title">Account Management</string>
    <string name="active_accounts">Active Accounts</string>
    <string name="add_account">Add Account</string>
    <string name="account_requests">Account Requests</string>
    <string name="see_more">See More</string>
    <string name="no_new_requests">No new requests</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="accept_request">Accept Request</string>
    <string name="reject_request">Reject Request</string>
    <string name="add_account_title">Add Account</string>
    <string name="add">Add Account</string>
    <string name="class_manager_title">Class Manager</string>
    <string name="add_classes">Add Classes</string>
    <string name="placeholder_section" tools:ignore="Typos">Section1</string>
    <string name="placeholder_schedule">11:00 AM - 12:30 PM</string>
    <string name="placeholder_teacher">Juan Dela Cruz</string>
    <string name="add_class_title">Add Class</string>
    <string name="add_class_code_hint">Add Class Code</string>
    <string name="join_class">Join Class</string>
    <string name="teacher_class_manager_title">Class Manager</string>
    <string name="search_hint">Search</string>
    <string name="no_search_results">No results</string>
    <string name="student_count">%d students</string>
    <string name="teacher_add_class_title">Add Class</string>
    <string name="add_class_subtitle">Please enter the needed details.</string>
    <string name="section_hint">Section</string>
    <string name="class_time">Class Time</string>
    <string name="number_of_students_hint">Number of Students</string>
    <string name="create_class">Create Class</string>
    <string name="time_start_hint">Start Time</string>
    <string name="time_end_hint">End Time</string>
    <string name="class_code_title">Class Code</string>
    <string name="class_code_copy">Copy</string>
    <string name="class_code_placeholder">XXXXXX</string>
    <string name="class_code_close_desc">Close Dialog</string>
    <string name="nav_class">Class</string>
    <string name="nav_badges">Badges</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_grades">Grades</string>
    <string name="class_page_title_placeholder">Section 1</string>
    <string name="play_a_game">Play a Game</string>
    <string name="lesson_week_placeholder">Week 1</string>
    <string name="lesson_title_placeholder">Lesson Title</string>
    <string name="lesson_desc_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris pretium…</string>
    <string name="assessment_placeholder">Assessment 1</string>
    <string name="add_button">Add</string>
    <string name="edit_lesson">Edit Lesson</string>
    <string name="add_options_title">Add Options</string>
    <string name="option_write_lesson">Write a Lesson</string>
    <string name="option_create_assessment">Create an Assessment Test</string>
    <string name="option_lesson_log">Daily Lesson Log</string>
    <string name="proceed">Proceed</string>
    <string name="write_lesson_title">Write a Lesson</string>
    <string name="week_number_hint">Week Number</string>
    <string name="lesson_title_hint">Lesson Title</string>
    <string name="next_button">Next</string>
    <string name="lesson_content_title">Lesson Content</string>
    <string name="add_media">Add Media</string>
    <string name="save">Save</string>
    <string name="lesson_content_hint">Lorem Ipsum</string>
    <string name="dialog_save_message">Are you sure you want to save?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discard_title">Discard changes?</string>
    <string name="discard_message">You have unsaved content. If you go back, your changes will be lost.</string>
    <string name="discard_action">Discard</string>
    <string name="cancel_action">Cancel</string>
    <string name="lesson_detail_title">Lesson</string>
    <string name="lesson_full_desc_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus lectus dui. Vestibulum accumsan sapien et ex varius, in rhoncus metus mollis. Aliquam turpis eros, fringilla convallis convallis eu, finibus at ligula.</string>
    <string name="edit_lesson_title">Edit a Lesson</string>
    <string name="error_blank_field">Please enter the needed details.</string>
    <string name="create_assessment_title">Assessment Test</string>
    <string name="assessment_number_hint">Assessment Number</string>
    <string name="assessment_title_hint">Assessment Title</string>
    <string name="available_from_hint">Available From</string>
    <string name="available_until_hint">Available Until</string>
    <string name="publish_assessment_test">Publish Assessment Test</string>
    <string name="add_question">Add Question</string>
    <string name="question_hint">Question</string>
    <string name="add_choices">Add Choices</string>
    <string name="answer_key">Answer Key</string>
    <string name="answer_choice_hint">Answer Choice</string>
    <string name="select_answer_key_title">Select Answer Key</string>
    <string name="dialog_save_assessment_message">Are you sure you want to save this assessment?</string>
    <string name="dialog_discard_assessment_title">Discard Changes?</string>
    <string name="dialog_discard_assessment_message">You have unsaved content. If you go back, your changes will be lost.</string>
    <string name="assessment_detail_title">Assessment</string>
    <string name="number_of_items">Number of Items: %d</string>
    <string name="starts_at">Starts: %s</string>
    <string name="ends_at">Ends: %s</string>
    <string name="start_assessment_test">Start Assessment Test</string>
    <string name="default_timer">00:00</string>
    <string name="previous_button">Previous</string>
    <string name="dialog_review_title">Review Answers</string>
    <string name="dialog_review_message">Do you want to review your answers?</string>
    <string name="assessment_results_title">Results</string>
    <string name="assessment_completed">Assessment Test completed!</string>
    <string name="score">Score: %d</string>
    <string name="date_accomplished">Date Accomplished: %s</string>
    <string name="notifications_title">Notifications</string>
    <string name="mark_all_read">Mark all as read</string>
    <string name="notification_settings_title">Notifications and Reminders</string>
    <string name="enable_class_schedule">Enable Class Schedule Reminder</string>
    <string name="enable_student_submission">Enable Student Submission Notification</string>
    <string name="notif_title_1">Time for class!</string>
    <string name="notif_desc_1">You have a class in Section 1.</string>
    <string name="notif_title_2">Student Submission</string>
    <string name="notif_desc_2">A student submitted their work</string>
    <string name="enable_posted_lesson">Enable Posted Lesson Notification</string>
    <string name="enable_posted_assessment">Enable Posted Assessment Notification</string>
    <string name="hi_user">Hi, %s!</string>
    <string name="account_settings">Account Settings</string>
    <string name="notifications_and_reminders">Notifications and Reminders</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="enable_account_approval">Enable Account Approval Request Notifications</string>
    <string name="notif_new_request">New Request!</string>
    <string name="notif_new_request_desc">There is a new account request.</string>
    <string name="participants_title">Participants</string>
    <string name="scores_title">Scores</string>
    <string name="quarterly_report_btn">Monthly Completion Report</string>
    <string name="quarterly_report_title">Monthly Completion Report</string>
    <string name="quarter_label">Quarter 1</string>
    <string name="generate_copy">Generate a copy</string>
    <string name="label_assessment_no">Assessment Test Number:</string>
    <string name="label_assessment_title">Assessment Test Title:</string>
    <string name="label_student_score">Student’s Assessment Test Score:</string>
    <string name="label_num_items">Number of Items:</string>
    <string name="label_percentage">Percentage of Score:</string>
    <string name="label_date_accomplished">Date Accomplished:</string>
    <string name="label_time_accomplished">Time Accomplished:</string>
    <string name="col_test_no">Assessment Test No.</string>
    <string name="col_test_score">Assessment Test Score</string>
    <string name="col_percentage">Percentage of Score</string>
    <string name="col_no_items">No. of Items</string>
    <string name="total_score">Total Score</string>
    <string name="total_items">Total No. of Items</string>
    <string name="grades_title">Grades</string>
    <string name="badges_title">Badges</string>
    <string name="you_acquired_the">You\'ve acquired the</string>
    <string name="badge_first_ace_list_title">First Ace!</string>
    <string name="badge_first_timer_list_title">First-Timer</string>
    <string name="badge_first_escape_list_title">First Escape!</string>
    <string name="badge_perfect_escape_list_title">Perfect Escape!</string>
    <string name="badge_first_explo_list_title">First Exploration...</string>
    <string name="badge_full_explo_list_title">Full Exploration...</string>
    <string name="badge_three_quarter_list_title">Three-Quarter Score!</string>
    <string name="badge_triple_ace_list_title">Triple Ace</string>
</resources>