<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_class"
        android:icon="@drawable/ic_class_yellow"
        android:fontFamily="@font/lexend"
        android:title="@string/nav_class" />
    <item
        android:id="@+id/nav_badges"
        android:icon="@drawable/ic_badges_green"
        android:fontFamily="@font/lexend"
        android:title="@string/nav_badges" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications_green"
        android:fontFamily="@font/lexend"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/nav_grades"
        android:icon="@drawable/ic_grades_green"
        android:fontFamily="@font/lexend"
        android:title="@string/nav_grades" />
</menu>